should not be longer than the lines of dashes.

Miguel Bolanos.

Contributor			Email
---------------------------------------------------------------------------

Claudio Matsuoka		claudio@conectiva.com
Eduardo Habkost			ehabkost@conectiva.com.br
Miguel Bolanos			mike@linuxlabs.com
Tommy McCabe			rocketjet314@yahoo.com

---------------------------------------------------------------------------

Wed Jun 09 08:54:11 CST 2004	Claudio Matsuoka <claudio@conectiva.com>

	* Trivial patch to build stuff in elkscmd/inet.

Wed Jun 09 08:21:32 CST 2004	Miguel Bolanos <mike@linuxlabs.com>

	* Included swapon back into cvs :)

Wed Jun 09 03:47:56 CST 2004	Tommy McCabe <rocketjet314@yahoo.com>

	* Included ktcp in full5

Wed Jun 09 03:45:34 CST 2004	Miguel Bolanos <mike@linuxlabs.com>
	
	* Added e3

Sat Jun  5 17:44:06 BRT 2004	Eduardo Habkost <ehabkost@conectiva.com.br>

	* rootfs_template/etc/passwd doesn't depend on rootfs_template.tar
	  anymore
	* Added warning about broken make clean
	* People didn't respected the above line of dashes. Making it
	  bigger  ;)

Fri Jun 04 05:26:48 CST 2004	Claudio Matsuoka <claudio@conectiva.com>

	* Fixes to rebuild disk images, improvements by Miguel.

Fri Jun 04 05:25:34 CST 2004	Tommy McCabe <rocketjet314@yahoo.com>

	* Improved Makefile to mount filesystems using sudo.

Thu Jun 03 21:20:47 CST 2004	Miguel Bolanos <mike@linuxlabs.com>

	* Added lib/ directory to rootfs_template
	* Removed rootfs_template.tar.
	* Removed "mkdir" commands from sys_utils/Makefile

Thu Jun 03 21:05:56 CST 2004	Tommy McCabe <rocketjet314@yahoo.com>

	* Improvements to MAKEDEV.. patch adapted by Eduardo Habkost

Thu Jun 03 21:01:34 CST 2004    Claudio Matsuoka <claudio@conectiva.com>

	* fixed BSS problem

Wed Jun 02 14:16:57 CST 2004	Claudio Matsuoka <claudio@conectiva.com>
	
	* Added more minix utilities (cal diff file find head sort tail tee)
	* Removed warning comment from ash/expand.c as bcc compiles the code.
