@@ -15,6 +15,11 @@ Tommy McCabe			rocketjet314@yahoo.com
 
 ---------------------------------------------------------------------------
 
+Tue Jul 27 07:48:56 CST 2004	Miguel Bolanos <mike@linuxlabs.com>
+
+	* Removed sudo commands from the Makefile, fixed the broken "clean"
+	  (all merged from Tommy's patch)
+
 Wed Jun 09 08:54:11 CST 2004	Claudio Matsuoka <claudio@conectiva.com>
 
 	* Trivial patch to build stuff in elkscmd/inet.
